--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,27 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 80px;
+    height: 80px;
 }
 
 .App-header {
-  background-color: #f8f8f8;
-  height: 150px;
-  padding: 20px;
-  color: #3d464d;
+    background-color: #f8f8f8;
+    height: 150px;
+    padding: 20px;
+    color: #3d464d;
 }
 
 .App-intro {
-  font-size: large;
+    font-size: large;
+}
+
+.editor {
+    width: 560px;
+    margin: 10px auto;
 }
 
 code {
-  color: #e73a37;
+    color: #e73a37;
 }
